--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.12.0",
+    "react-audio-player": "^0.11.1",
     "react-dom": "^16.12.0",
+    "react-hot-loader": "^4.12.18",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
