--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.7.0",
+    "@material-ui/icons": "^4.5.1",
     "@types/react": "^16.9.13",
     "axios": "^0.19.0",
+    "node-gyp": "^6.0.1",
     "react": "^16.12.0",
     "react-audio-player": "^0.11.1",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.18",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "typeface-roboto": "0.0.75",
     "typescript": "^3.7.2"
   },
   "scripts": {
